tests/snapshots/opendbc/generator/subaru/subaru_global_2020_hybrid.snap
---
source: tests/snapshots.rs
---
version: ""
bit_timing: ~
messages:
  - id:
      Standard: 39
    name: Cruise_Status_2
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: Cruise_Activated
        multiplexer_indicator: Plain
        start_bit: 37
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 295
    name: Transmission
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: Gear
        multiplexer_indicator: Plain
        start_bit: 44
        size: 4
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 360
    name: Throttle_Hybrid
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: CHECKSUM
        multiplexer_indicator: Plain
        start_bit: 0
        size: 8
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 8
        size: 4
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
      - name: Throttle_Pedal
        multiplexer_indicator: Plain
        start_bit: 32
        size: 8
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 550
    name: Brake_Hybrid
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: Brake_Pedal
        multiplexer_indicator: Plain
        start_bit: 24
        size: 8
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: Brake
        multiplexer_indicator: Plain
        start_bit: 37
        size: 1
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
comments:
  - Plain:
      comment: IMPORT _subaru_global.dbc
value_descriptions:
  - Signal:
      message_id:
        Standard: 295
      name: Gear
      value_descriptions:
        - id: 0
          description: P
        - id: 1
          description: R
        - id: 3
          description: D
